<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="17dp"
        android:text="@string/walletLock"
        android:textColor="@color/text_color_black_5a"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/inPwdEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="14dp"
        android:gravity="left"
        android:lineSpacingExtra="4dp"
        android:text="@string/walletLockMsg"
        android:textColor="@color/text_color_black_5a"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/closeBut"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/fillet_fill_wathet"
            android:src="@drawable/exit"
            android:text="取消"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp" />

        <Button
            android:id="@+id/unlockBut"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="130dp"
            android:layout_height="37dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/fillet_fill_wathet"
            android:text="@string/unlock"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp" />

    </LinearLayout>
</LinearLayout>
