<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relat"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:id="@+id/copyPrvPerBut"
                android:layout_width="40dp"
                android:layout_height="40dp">

                <ImageButton
                    android:layout_width="10dp"
                    android:layout_height="18dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="8dp"
                    android:background="@color/colorPrimary"
                    android:scaleType="centerInside"
                    android:src="@drawable/pre" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:text="@string/copyPrvKey"
                android:textColor="@color/whiteColor"
                android:textSize="19dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relat"
            android:layout_marginLeft="21dp"
            android:layout_marginRight="21dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="19dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg1"
                android:textColor="@color/text_color_blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginTop="6dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg1Detailed"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg2"
                android:textColor="@color/text_color_blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginTop="6dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg2Detailed"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg3"
                android:textColor="@color/text_color_blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text1"
                android:layout_marginTop="6dp"
                android:gravity="left"
                android:text="@string/copyPrvMsg3Detailed"
                android:textColor="@color/text_color_gray" />

            <TextView
                android:id="@+id/prvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_marginTop="33dp"
                android:background="@drawable/fillet_fill_gary_100"
                android:ems="20"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:paddingBottom="17dp"
                android:paddingLeft="19dp"
                android:paddingRight="19dp"
                android:paddingTop="17dp"
                android:singleLine="true"
                android:text="1"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color_gray"
                android:textSize="15dp" />
        </LinearLayout>
        <!--
            <Button
                android:id="@+id/copyBut"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="37dp"
                android:background="@drawable/fillet_fill_color_promary"
                android:text="@string/copy"
                android:textColor="@color/whiteColor"
                android:textSize="15dp" />-->

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:background="@color/whiteColor" />

</RelativeLayout>
