<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:background="@color/whiteColor"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">


        <TextView
            android:id="@+id/infoWalletName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hangqing"
            android:textColor="@color/whiteColor"
            android:textSize="19dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:background="@color/whiteColor"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_gravity="left"
            android:background="@color/background_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="14dp"
                android:text="@string/coinType"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="17dp"
                android:layout_toLeftOf="@+id/rightLayout"
                android:gravity="right|center"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp" />

            <LinearLayout
                android:id="@+id/rightLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/floatText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginRight="14dp"
                    android:background="@drawable/back_down_2"
                    android:clickable="true"
                    android:text="@string/zhangdiefu"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13dp" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/hangQingList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linerLayout"
        android:background="@color/whiteColor"
        android:orientation="vertical" />

</RelativeLayout>
